--- a/Resources/translations/province.nl.yml
+++ b/Resources/translations/province.nl.yml
@@ -1,6 +1,6 @@
 antwerpen: Antwerpen
 limburg: Limburg
-oost_vlanderen: Oos Vlanderen
+oost_vlanderen: Oost Vlanderen
 vlaams_brabant: Vlaams Brabant
 west_vlaanderen: West Vlaanderen
 brabant_wallon: Brabant Wallon
