--- a/Resources/translations/province.fr.yml
+++ b/Resources/translations/province.fr.yml
@@ -1,11 +1,11 @@
 antwerpen: Anvers
 limburg: Limbourg
-oost_vlanderen: Flandre Prientale
+oost_vlanderen: Flandre Orientale
 vlaams_brabant: Brabant Flamand
 west_vlaanderen: Frandre Occidentale
 brabant_wallon: Brabant Wallon
 hainaut: Hainaut
-liege: Liege
+liege: Liège
 luxembourg: Luxembourg
 namur: Namur
 brussels: Bruxelles
