--- a/Resources/translations/job.de.yml
+++ b/Resources/translations/job.de.yml
@@ -2,7 +2,7 @@ accept_pending_announcer: 'Accepter le directeur d''école'
 accept_pending_announcer_content: "Cher %name%,<br>\nVotre accès à la plate-forme http://teachersmobility.be vient d'être validée.<br>\nVous pouvez désormais y poster vos annonces.<br><br>\nCordialement\n"
 accept_pending_announcer_message: 'Êtes-vous sûr de vouloir valider l''inscription de ce directeur d''école ?'
 accept_pending_announcer_object: 'Votre accès à Teachers mobility a été validé'
-accept_visibility_message: 'J''accepte que mon CV soit visible par les directeurs d''écoles'
+accept_visibility_message: 'Ich bin damit einverstanden, dass Schulleiter meine Bewerbung einsehen können.'
 add_announcers: 'Ajouter des chefs d''établissement'
 add_community: 'Ajouter une communauté'
 add_cv: 'Ajouter un CV'
@@ -15,7 +15,7 @@ announcers_management: 'Gestion des chefs d''établissements'
 announcers_management_menu: 'Gestion des chefs d''établissements'
 announcers_managemnet: 'Gestion des chefs d''établissement'
 application_date: 'Date d''application'
-candidate_for: 'Candidat pour'
+candidate_for: 'Bewerber für'
 candidate_from: 'Candidat de'
 communities_management: 'Gestion des communautés'
 community: Communauté
@@ -27,8 +27,8 @@ create_job_offer: 'Créer une offre d''emploi'
 created_pending_announcer_content: "Cher %lastName% %firstName%,<br>\nVotre profil a été enregistré sur teachersmobility.be.<br>Votre profil doit être validé par les administrateurs pour pouvoir poster vos offres.<br>Vous recevrez un mail de confirmation dès la validation enregistrée.<br><br>\nL'équipe Teachers mobility\n"
 created_pending_announcer_object: 'Votre profil a été créé sur teachersmobility.be'
 cv: 'Lebenslauf'
-cv_expiration_date: 'Votre CV est visible jusqu''au'
-cv_title: 'Titre du cv'
+cv_expiration_date: 'Ihre Bewerbung ist gültig bis'
+cv_title: 'Name des Lebenslaufs'
 decline_pending_announcer: 'Refuser un directeur d''établissement'
 decline_pending_announcer_content: null
 decline_pending_announcer_message: 'Êtes-vous sûr de vouloir refuser ce directeur d''établissement ?'
@@ -72,10 +72,10 @@ notification_explanations: notification_explanations
 pending_announcement_form_message: 'Inscrivez votre établissement'
 pending_announcers: 'Chefs d''établissement en attente'
 pending_announcers_managemnet: 'Gestion des chefs d''établissements en attente'
-registration_number: Matricule
+registration_number: 'Matrikelnummer'
 school_director: 'Directeur d''école'
 seeker_form_message: 'Détaché de la Fédération Wallonie-Bruxelles'
 show_job_offers: 'Voir les offres d''emplois'
 show_offers_for: 'Offre en %community%'
 teacher: Enseignant
-you_are: 'Du bist'
+you_are: 'Sie Sind'
