--- a/Resources/translations/province.de.yml
+++ b/Resources/translations/province.de.yml
@@ -1,11 +1,12 @@
-antwerpen: Anvers
-limburg: Limbourg
-oost_vlanderen: Flandre orientale
-vlaams_brabant: Brabant flamand
-west_vlaanderen: Frandre occidentale
-brabant_wallon: Brabant wallon
-hainaut: Hainaut
-liege: Liege
-luxembourg: Luxembourg
+antwerpen: Antwerpen
+limburg: Limburg
+oost_vlanderen: Ostflandern
+vlaams_brabant: Flämisch Brabant
+west_vlaanderen: Westflandern
+brabant_wallon: Wallonisch Brabant
+hainaut: Hennegau
+liege: Lüttich
+luxembourg: Luxemburg
 namur: Namur
+Brussels: Brüssel
 province: Province
