--- a/Resources/translations/platform.de.yml
+++ b/Resources/translations/platform.de.yml
@@ -1,2 +1,2 @@
-password_verification: Confirmation du mot de passe
+password_verification: 'Wiederhlung des Passwortes'
 Captcha: Veuillez recopier le captcha
